--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,63 @@
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.1
 cycler==0.12.1
+filelock==3.14.0
 fonttools==4.51.0
+fsspec==2024.3.1
 gensim==4.3.2
+huggingface-hub==0.23.0
+idna==3.7
 jellyfish==1.0.3
+Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.5
+MarkupSafe==2.1.5
 matplotlib==3.8.4
+mpmath==1.3.0
 networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 regex==2024.5.10
+requests==2.31.0
+safetensors==0.4.3
+scikit-learn==1.4.2
 scipy==1.12.0
 seaborn==0.13.2
 segtok==1.5.11
+sentence-transformers==2.7.0
 six==1.16.0
 smart-open==7.0.4
+sympy==1.12
 tabulate==0.9.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+torch==2.3.0
 tqdm==4.66.4
+transformers==4.40.2
+triton==2.3.0
+typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.1
 wrapt==1.16.0
 yake==0.4.8
